--- a/pom.xml
+++ b/pom.xml
@@ -42,10 +42,15 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.0</version>
         </dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.h2database</groupId>-->
+			<!--<artifactId>h2</artifactId>-->
+			<!--<scope>runtime</scope>-->
+		<!--</dependency>-->
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>6.4.0.jre8</version>
 		</dependency>
         <!-- This dependency is only for JAVA version 9 please take it account-->
 		<dependency>
