--- a/pom.xml
+++ b/pom.xml
@@ -48,18 +48,18 @@
 			<!--<artifactId>h2</artifactId>-->
 			<!--<scope>runtime</scope>-->
 		<!--</dependency>-->
-		<!-- SQL Server database-->
-		<!--<dependency>-->
-			<!--<groupId>com.microsoft.sqlserver</groupId>-->
-			<!--<artifactId>mssql-jdbc</artifactId>-->
-			<!--<version>6.4.0.jre8</version>-->
-		<!--</dependency>-->
+		 <!--SQL Server database-->
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>6.4.0.jre8</version>
+		</dependency>
         <!-- This dependency is only for JAVA version 9 please take it account-->
 		<!-- Mysql Database-->
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>mysql</groupId>-->
+			<!--<artifactId>mysql-connector-java</artifactId>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
