--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ security:
 security:
   signing-key: MaYzkSjmkzPC57L
   encoding-strength: 256
-  security-realm: Spring Boot JWT Example Realm
+  security-realm: Team D
 
 security:
   jwt:
@@ -18,24 +18,28 @@ security:
     resource-ids: testjwtresourceid
 
 # MariaDB or Mysql Server config
+#spring:
+#  jpa:
+#    hibernate:
+##      ddl-auto: update
+#      ddl-auto: create-drop
+#      show-sql: true
+#      dialect: org.hibernate.dialect.MySQL5Dialect
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/ssidev
+#    username: root
+#    password: root
+
+
 spring:
+  datasource:
+    url: jdbc:sqlserver://localhost
+    username: sa
+    password: P@55w0rd
+    platform: mssql
+    driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
     hibernate:
-#      ddl-auto: update
-      ddl-auto: create-drop
-      show-sql: true
-      dialect: org.hibernate.dialect.MySQL5Dialect
-  datasource:
-    url: jdbc:mysql://localhost:3306/ssidev
-    username: root
-    password: root
-
-#      database: SQL_SERVER
-# for sql server
-#spring:
-#  datasource:
-#    url: jdbc:sqlserver://localhost
-#    username: sa
-#    password: P@55w0rd
-#    platform: mssql
-#    driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
+      ddl-auto: update
+    database: SQL_SERVER
+    show-sql: true
