Create table User_Role, Fix tables, Mapping and use ModelBase in tables Area, Equipment, Personal, Position, PositionPersonal. Add field Image for Personal and Equipment

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,9 +33,9 @@ security:
 
 spring:
   datasource:
-    url: jdbc:sqlserver://localhost
+    url: jdbc:sqlserver://\PIERO-ASUS\SQL2012;database=ssid
     username: sa
-    password: P@55w0rd
+    password: control
     platform: mssql
     driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
