--- a/pom.xml
+++ b/pom.xml
@@ -42,18 +42,18 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.0</version>
         </dependency>
-		<!-- H2 database -->
-		<!--<dependency>-->
-			<!--<groupId>com.h2database</groupId>-->
-			<!--<artifactId>h2</artifactId>-->
-			<!--<scope>runtime</scope>-->
-		<!--</dependency>-->
-		 <!--SQL Server database-->
+		 <!--H2 database-->
 		<dependency>
-			<groupId>com.microsoft.sqlserver</groupId>
-			<artifactId>mssql-jdbc</artifactId>
-			<version>6.4.0.jre8</version>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
+		 <!--SQL Server database-->
+		<!--<dependency>-->
+			<!--<groupId>com.microsoft.sqlserver</groupId>-->
+			<!--<artifactId>mssql-jdbc</artifactId>-->
+			<!--<version>6.4.0.jre8</version>-->
+		<!--</dependency>-->
         <!-- This dependency is only for JAVA version 9 please take it account-->
 		<!-- Mysql Database-->
 		<!--<dependency>-->
