--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,11 +33,26 @@ security:
 
 
 # Coneccion de sql server
+#spring:
+#  datasource:
+#    url: jdbc:sqlserver://\ASUS\SQL2012;database=ssi_database
+#    username: sa
+#    password: control
+#    platform: mssql
+#    driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    database: SQL_SERVER
+#    show-sql: true
+
+
+# Franz configuracion
 spring:
   datasource:
-    url: jdbc:sqlserver://\ASUS\SQL2012;database=ssi_database
+    url: jdbc:sqlserver://localhost;database=grupod
     username: sa
-    password: control
+    password: P@55w0rd
     platform: mssql
     driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
