--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
 			<version>2.8.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-multipart</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
