--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,4 +25,6 @@ spring:
     hibernate:
       ddl-auto: update
     database: SQL_SERVER
-show-sql: true
+    show-sql: true
+
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
