--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,14 +16,14 @@
 # Coneccion de sql server
 spring:
   datasource:
-    url: jdbc:sqlserver://localhost:1433
+    url: jdbc:sqlserver://localhost:51535
     username: sa
-    password: P@55w0rd
+    password: root
     platform: mssql
     driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     database: SQL_SERVER
     show-sql: true
 
