--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,12 +18,12 @@ spring:
   datasource:
     url: jdbc:sqlserver://localhost:1433
     username: sa
-    password: root
+    password: P@55w0rd
     platform: mssql
     driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     database: SQL_SERVER
     show-sql: true
 
